--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "type": "module",
     "dependencies": {
+        "csv-parse": "^5.3.0",
         "fetch": "^1.1.0",
         "node-fetch": "^2.6.7",
         "prompt-sync": "^4.2.0"
