--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
         "csv-parse": "^5.3.0",
         "fetch": "^1.1.0",
         "node-fetch": "^2.6.7",
-        "prompt-sync": "^4.2.0"
+        "prompt": "^1.3.0"
     }
 }
