Migrated project to TypeScript

--- a/package.json
+++ b/package.json
@@ -1,9 +1,25 @@
 {
     "type": "module",
     "dependencies": {
+        "@types/prompt": "^1.1.2",
         "csv-parse": "^5.3.0",
         "fetch": "^1.1.0",
-        "node-fetch": "^2.6.7",
+        "node-fetch": "^3.2.10",
         "prompt": "^1.3.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.7.14",
+        "@types/node-fetch": "^2.6.2",
+        "typescript": "^4.8.2"
+    },
+    "name": "jsfunctionalprogramming",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "start": "tsc --watch"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/willsawyerrrr/TranslinkParser.git"
     }
 }
